--- a/src/main/resources/templates/admin/left.html
+++ b/src/main/resources/templates/admin/left.html
@@ -11,6 +11,13 @@
                 <li><a href="/BillType/list" target="rightFrame"><span class="am-icon-th"></span>账单类型管理<span class="am-badge am-badge-secondary am-margin-right am-fr">24</span></a></li>
             </ul>
         </li>
+        <li class="admin-parent">
+            <a class="am-cf" data-am-collapse="{target: '#collapse-nav2'}"><span class="am-icon-line-chart"></span> 资金规划 <span class="am-icon-angle-right am-fr am-margin-right"></span></a>
+            <ul class="am-list admin-sidebar-sub am-collapse" id="collapse-nav2" style="height: 0px;">
+                <li><a href="/BillType/list" target="rightFrame"><span class="am-icon-th"></span>查看资金规划<span class="am-badge am-badge-secondary am-margin-right am-fr">24</span></a></li>
+                <li><a href="/PlanMgr/list" target="rightFrame"><span class="am-icon-puzzle-piece"></span> 资金规划管理</a></li>
+            </ul>
+        </li>
         <li><a href="admin-table.html"><span class="am-icon-table"></span> 日志</a></li>
         <li><a href="/Notice/list" target="rightFrame"><span class="am-icon-pencil-square-o"></span> 公告管理</a></li>
         <li class="admin-parent">
