--- a/src/main/resources/templates/admin/billManager/list.html
+++ b/src/main/resources/templates/admin/billManager/list.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </div>
-        <form id="searchForm" action="list">
+        <form id="searchForm" action="list" method="post">
             <div class="am-u-md-3 am-cf">
                 <div class="am-fr">
                     <div class="am-input-group am-input-group-sm">
