--- a/src/main/resources/templates/admin/planMgr/edit.html
+++ b/src/main/resources/templates/admin/planMgr/edit.html
@@ -1,61 +1,90 @@
 <#include "/admin/head.html">
-
-<script type="text/javascript">
-    var ue = UE.getEditor('content');
-    function initPage(){
-        //解码富文本
-        editorShow("contentHidden","content",true);
-        $('#createDate').datetimepicker({
-            minView: 'month',
-            format: 'yyyy-mm-dd'
-        });
-    }
-</script>
+<script src="/static/admin/planMgr/editPage.js"></script>
 <div class="admin-content">
 
     <div class="am-cf am-padding">
-        <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">公告管理</strong> /
+        <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">资金规划管理</strong> /
             <small>修改</small>
         </div>
     </div>
 
-    <div class="am-g">
-        <form class="am-form" action="../update" onsubmit="return editorShow('contentHidden','content',false)" >
-            <input type="hidden" name="id" value="${notice.id}" class="am-input-sm">
-            <div class="am-g am-margin-top">
-                <div class="am-u-sm-2 am-text-right">
-                    公告名称
-                </div>
-                <div class="am-u-sm-10">
-                    <input type="text" name="name" value="${notice.name}" class="am-input-sm">
-                </div>
-                <!--<div class="am-u-sm-6">*必填，不可重复</div>-->
-            </div>
+    <div class="am-tabs am-margin" data-am-tabs>
+        <ul class="am-tabs-nav am-nav am-nav-tabs">
+            <li class="am-active"><a href="#tab1">基本信息</a></li>
+            <li><a href="#tab2">计划明细</a></li>
+        </ul>
 
-            <div class="am-g am-margin-top">
-                <div class="am-u-sm-2 am-text-right">
-                    内容
+        <div class="am-tabs-bd">
+            <div class="am-tab-panel am-fade am-in am-active" id="tab1">
+                <div class="am-g">
+                    <form class="am-form" action="../update"
+                          onsubmit="return editorShow('contentHidden','content',false)">
+                        <input type="hidden" name="id" value="${notice.id}" class="am-input-sm">
+                        <div class="am-g am-margin-top">
+                            <div class="am-u-sm-2 am-text-right">
+                                计划名称
+                            </div>
+                            <div class="am-u-sm-10">
+                                <input type="text" name="name" value="${plan.name}" class="am-input-sm">
+                            </div>
+                            <!--<div class="am-u-sm-6">*必填，不可重复</div>-->
+                        </div>
+
+                        <div class="am-g am-margin-top">
+                            <div class="am-u-sm-2 am-text-right">
+                                是否默认计划
+                            </div>
+                            <div class="am-u-sm-10">
+                                <div class="am-btn-group" data-am-button>
+                                    <label class="am-btn am-btn-default am-btn-xs">
+                                        <input type="radio" name="options" id="option1"> 是
+                                    </label>
+                                    <label class="am-btn am-btn-default am-btn-xs">
+                                        <input type="radio" name="options" id="option2"> 否
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="am-g am-margin-top-sm">
+                            <div class="am-u-sm-2 am-text-right">
+                                计划描述
+                            </div>
+                            <div class="am-u-sm-10">
+                                <textarea rows="10" name="description">${plan.description}</textarea>
+                            </div>
+                        </div>
+                        <div class="am-margin">
+                            <button type="submit" class="am-btn am-btn-primary am-btn-xs">提交保存</button>
+                            <!--     <button type="button" class="am-btn am-btn-primary am-btn-xs">返回列表</button>-->
+                        </div>
+                    </form>
                 </div>
-                <div class="am-u-sm-10">
-                    <div class="am-btn-group" data-am-button>
-                        <textarea id="content" rows="15"></textarea>
-                        <input type="hidden" id="contentHidden" name ="content" value="${notice.content}" >
+            </div>
+            <select style="display:none" id="typeContent"></select>
+            <div class="am-tab-panel am-fade am-in am-active" id="tab2">
+                <div class="am-g">
+                    <div class="am-margin">
+                        <button type="button" class="am-btn am-btn-primary am-btn-xs">新增</button>
+                        <button type="button" class="am-btn am-btn-primary am-btn-xs">保存</button>
                     </div>
+                    <table class="am-table am-table-striped am-table-hover table-main">
+                        <thead>
+                        <tr>
+                            <th class="table-check"><input type="checkbox"/></th>
+                            <th class="table-set">操作</th>
+                            <th class="table-id">序号</th>
+                            <th class="table-title">标题</th>
+                            <th class="table-type">账单类型</th>
+                            <th class="table-type">金额</th>
+                            <th class="table-author">描述</th>
+                        </tr>
+                        </thead>
+                        <tbody id="detailList">
+                        </tbody>
+                    </table>
                 </div>
             </div>
-            <div class="am-g am-margin-top-sm">
-                <div class="am-u-sm-2 am-text-right">
-                    日期
-                </div>
-                <div class="am-u-sm-10">
-                    <input type="text" id="createDate" name="createDate" value="${notice.createDate?string('yyyy-MM-dd')}" class="am-form-field" readonly/>
-                </div>
-            </div>
-            <div class="am-margin">
-                <button type="submit" class="am-btn am-btn-primary am-btn-xs">提交保存</button>
-                <!--     <button type="button" class="am-btn am-btn-primary am-btn-xs">返回列表</button>-->
-            </div>
-        </form>
+        </div>
     </div>
 
 
