--- a/src/main/resources/templates/admin/left.html
+++ b/src/main/resources/templates/admin/left.html
@@ -12,8 +12,8 @@
             </ul>
         </li>
         <li class="admin-parent">
-            <a class="am-cf" data-am-collapse="{target: '#collapse-nav2'}"><span class="am-icon-line-chart"></span> 资金规划 <span class="am-icon-angle-right am-fr am-margin-right"></span></a>
-            <ul class="am-list admin-sidebar-sub am-collapse" id="collapse-nav2" style="height: 0px;">
+            <a class="am-cf" data-am-collapse="{target: '#plan-nav'}"><span class="am-icon-line-chart"></span> 资金规划 <span class="am-icon-angle-right am-fr am-margin-right"></span></a>
+            <ul class="am-list admin-sidebar-sub am-collapse" id="plan-nav" style="height: 0px;">
                 <li><a href="/BillType/list" target="rightFrame"><span class="am-icon-th"></span>查看资金规划<span class="am-badge am-badge-secondary am-margin-right am-fr">24</span></a></li>
                 <li><a href="/PlanMgr/list" target="rightFrame"><span class="am-icon-puzzle-piece"></span> 资金规划管理</a></li>
             </ul>
@@ -21,10 +21,10 @@
         <li><a href="admin-table.html"><span class="am-icon-table"></span> 日志</a></li>
         <li><a href="/Notice/list" target="rightFrame"><span class="am-icon-pencil-square-o"></span> 公告管理</a></li>
         <li class="admin-parent">
-            <a class="am-cf" data-am-collapse="{target: '#collapse-nav2'}"><span class="am-icon-line-chart"></span> 账单统计 <span class="am-icon-angle-right am-fr am-margin-right"></span></a>
-            <ul class="am-list admin-sidebar-sub am-collapse" id="collapse-nav2" style="height: 0px;">
-                <li><a href="admin-user.html" class="am-cf"><span class="am-icon-check"></span> 入账统计<span class="am-icon-star am-fr am-margin-right admin-icon-yellow"></span></a></li>
-                <li><a href="admin-help.html"><span class="am-icon-puzzle-piece"></span> 出账统计</a></li>
+            <a class="am-cf" data-am-collapse="{target: '#report-nav'}"><span class="am-icon-line-chart"></span> 账单统计 <span class="am-icon-angle-right am-fr am-margin-right"></span></a>
+            <ul class="am-list admin-sidebar-sub am-collapse" id="report-nav" style="height: 0px;">
+                <li><a href="/Report/reportPage?type=1" target="rightFrame" class="am-cf"><span class="am-icon-check"></span> 入账统计<span class="am-icon-star am-fr am-margin-right admin-icon-yellow"></span></a></li>
+                <li><a href="/Report/reportPage?type=0" target="rightFrame"><span class="am-icon-puzzle-piece"></span> 出账统计</a></li>
                 <li><a href="admin-gallery.html"><span class="am-icon-th"></span> 统计分析<span class="am-badge am-badge-secondary am-margin-right am-fr">24</span></a></li>
                 <li><a href="admin-log.html"><span class="am-icon-calendar"></span> 系统日志</a></li>
                 <li><a href="admin-404.html"><span class="am-icon-bug"></span> 404</a></li>
@@ -44,7 +44,7 @@
     <div class="am-panel am-panel-default admin-sidebar-panel">
         <div class="am-panel-bd">
             <p><span class="am-icon-bookmark"></span> 公告</p>
-            <p>打算日微信小程序了，还有超鬼王。。</p>
+            <p>。。</p>
         </div>
     </div>
 
