--- a/src/main/resources/templates/admin/billManager/list.html
+++ b/src/main/resources/templates/admin/billManager/list.html
@@ -17,8 +17,12 @@
                         </button>
                         <button type="button" class="am-btn am-btn-default"><span class="am-icon-trash-o"></span> 删除
                         </button>
-                        <span>&nbsp;&nbsp;&nbsp;收入：</span><span id="monthIn"></span>
-                        <span>&nbsp;&nbsp;&nbsp;支出</span><span id="monthOut"></span>
+                        <span>&nbsp;&nbsp;&nbsp;收入：</span><span id="monthIn">&nbsp;</span>
+                        <span>&nbsp;&nbsp;&nbsp;支出：</span><span id="monthOut">&nbsp;</span>
+                        <span>&nbsp;&nbsp;&nbsp;存款：</span><span id="monthSave">&nbsp;</span>
+                        <span>&nbsp;&nbsp;&nbsp;剩余可支配：</span><span id="monthLeft">&nbsp;</span>
+                        <button type="button" onclick="leftToSave()" class="am-btn am-btn-default"><span class="am-icon-trash-o"></span> 余额转入存款
+                        </button>
                     </div>
 
                 </div>
