--- a/src/main/resources/templates/admin/billTypeMgr/add.html
+++ b/src/main/resources/templates/admin/billTypeMgr/add.html
@@ -50,6 +50,9 @@
                         <label class="am-btn am-btn-default am-btn-xs">
                             <input type="radio" name="type" value="1" id="option2"> 入账
                         </label>
+                        <label class="am-btn am-btn-default am-btn-xs">
+                            <input type="radio" name="type" value="2" id="option3"> 存款
+                        </label>
                     </div>
                 </div>
             </div>
