--- a/src/main/resources/templates/admin/wish/list.html
+++ b/src/main/resources/templates/admin/wish/list.html
@@ -31,7 +31,7 @@
                         <#if item.is_finished == 0>
                             <button type="button" onclick="openModal('add-modal',getWish(${item.id}),null)" class="am-btn am-btn-default"><span class="am-icon-plus"></span> 分配</button>
                             <button type="button" onclick="finishWish(${item.id})" class="am-btn am-btn-default"><span class="am-icon-check"></span> 完成</button>
-                            <button type="button" onclick="delM(${item.id})" class="am-btn am-btn-default"><span class="am-icon-check"></span> 删除</button>
+                            <button type="button" onclick="del(${item.id})" class="am-btn am-btn-default"><span class="am-icon-check"></span> 删除</button>
                         </#if>
                         <p>${item.money_in}/${item.money}</p>
                         <#if item.is_finished == 0>
