--- a/src/main/resources/templates/admin/acticle/edit.html
+++ b/src/main/resources/templates/admin/acticle/edit.html
@@ -59,7 +59,7 @@
                     金额
                 </div>
                 <div class="am-u-sm-10">
-                    <input type="text" name="money" value="${bill.money?c}" class="am-input-sm">
+                    <input type="text" name="money" value="${bill.money}" class="am-input-sm">
                 </div>
             </div>
 
