--- a/src/main/resources/templates/admin/acticle/add.html
+++ b/src/main/resources/templates/admin/acticle/add.html
@@ -1,31 +1,37 @@
 <#include "/admin/head.html">
 <script>
     function initPage(){
+        //余额转入存款
+        var money = getUrlParm('left_m');
+        if(money){
+            $('#money').val(money);
+            $('#description').text('余额转入存款');
+            $('#bill_name').val('余额转入存款');
+        }
         $('#billDate').datetimepicker({
             minView: 'month',
             format: 'yyyy-mm-dd'
         });
     }
-
 </script>
 <div class="admin-content">
 
     <div class="am-cf am-padding">
         <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">账单管理</strong> /
-            <small>修改</small>
+            <small>添加</small>
         </div>
     </div>
 
     <div class="am-g">
-        <form class="am-form" action="../update" >
-            <input type="hidden" name="id" value=${bill.id} class="am-input-sm">
-            <input type="hidden" name="creatorId" value=${bill.creatorId} />
+        <form class="am-form" action="save" >
+            <input type="hidden" name="id" value="" class="am-input-sm">
             <div class="am-g am-margin-top">
                 <div class="am-u-sm-2 am-text-right">
                     账单名
                 </div>
                 <div class="am-u-sm-10">
-                    <input type="text" name="name" value="${bill.name}" class="am-input-sm">
+                    <!--<input type="hidden" name="creatorId" value="1" />-->
+                    <input type="text" name="name" id="bill_name" value="流水账" class="am-input-sm">
                 </div>
                 <!--<div class="am-u-sm-6">*必填，不可重复</div>-->
             </div>
@@ -40,16 +46,18 @@
                             <option value="">请选择&nbsp;&nbsp;&nbsp;</option>
                             <#list typeList.parent as parent>
                                 <optgroup label="${parent.name}">
-                                <#list typeList[parent.name] as child>
-                                    <#if bill.billTypeId == child.id>
-                                        <option value=${child.id} selected="selected">${child.name}</option>
-                                    <#else>
-                                        <option value=${child.id}>${child.name}</option>
-                                    </#if>
-                                </#list>
+                                    <#list typeList[parent.name] as child>
+                                            <option value=${child.id}>${child.name}</option>
+                                    </#list>
                                 </optgroup>
                             </#list>
                         </select>
+                        <!--<label class="am-btn am-btn-default am-btn-xs">
+                            <input type="radio" name="options" value="0" id="option1"> 出账
+                        </label>
+                        <label class="am-btn am-btn-default am-btn-xs">
+                            <input type="radio" name="options" value="1" id="option2"> 入账
+                        </label>-->
                     </div>
                 </div>
             </div>
@@ -59,7 +67,7 @@
                     金额
                 </div>
                 <div class="am-u-sm-10">
-                    <input type="text" name="money" value="${bill.money?c}" class="am-input-sm">
+                    <input type="text" id="money" name="money" class="am-input-sm">
                 </div>
             </div>
 
@@ -68,8 +76,8 @@
                     账单时间
                 </div>
                 <div class="am-u-sm-10">
-                    <!--<input type="text" name="billDate" />-->
-                    <p><input type="text" id="billDate" name="billDate" value="${bill.billDate?string('yyyy-MM-dd')}" class="am-form-field" readonly/></p>
+                        <!--<input type="text" name="billDate" />-->
+                        <p><input type="text" id="billDate" name="billDate" class="am-form-field" readonly/></p>
                 </div>
             </div>
 
@@ -78,7 +86,7 @@
                     描述
                 </div>
                 <div class="am-u-sm-10">
-                    <textarea rows="10" name="description">${bill.description}</textarea>
+                    <textarea rows="10" id="description" name="description"></textarea>
                 </div>
             </div>
             <div class="am-margin">
